kubernetes/ingress-allowed-hostname/v1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-test
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: pazingressapsycert.credito.bcp.com.pe
    http:
      paths:
      - backend:
          service:
            name: nginx-test
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
